--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ button:hover {
   <div id="logs">Logs will appear here...</div>
 </div>
 
-<!-- ✅ Correct CDN for Solana Web3.js -->
+<!-- ✅ Solana Web3.js IIFE build -->
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.91.0/lib/index.iife.min.js"></script>
 
 <script>
@@ -81,16 +81,16 @@ window.addEventListener('DOMContentLoaded', async () => {
     logsEl.scrollTop = logsEl.scrollHeight;
   }
 
-  // ✅ Check that web3.js loaded
+  // Check web3 loaded
   if (!window.solanaWeb3) {
-    logStep('❌ Solana Web3.js failed to load. Check the script tag or your internet connection.');
+    logStep('❌ Solana Web3.js failed to load.');
     return;
   }
 
   const web3 = window.solanaWeb3;
   logStep('✅ Solana Web3.js loaded successfully.');
 
-  // 🔍 Detect wallets
+  // Detect wallets
   function detectWallets() {
     const detected = [];
     if (window.solana?.isPhantom)
@@ -112,7 +112,7 @@ window.addEventListener('DOMContentLoaded', async () => {
       walletSelect.appendChild(opt);
     });
     if (detectedWallets.length === 0) {
-      logStep('❌ No wallets detected. Please install Phantom, Solflare, or Slope.');
+      logStep('❌ No wallets detected. Install Phantom, Solflare, or Slope.');
     } else {
       logStep('Detected wallets: ' + detectedWallets.map(w => w.name).join(', '));
     }
@@ -125,6 +125,7 @@ window.addEventListener('DOMContentLoaded', async () => {
     return detectWallets().find(w => w.name === selected);
   }
 
+  // Connect wallet
   async function connectWalletFunc() {
     logsEl.innerText = '';
     wallet = getSelectedWallet();
@@ -136,14 +137,13 @@ window.addEventListener('DOMContentLoaded', async () => {
     try {
       logStep(`Selected wallet: ${wallet.name}`);
       logStep('Step 1: Connecting wallet...');
-
       const resp = await wallet.wallet.connect();
       publicKey = resp?.publicKey || wallet.wallet.publicKey;
       if (!publicKey) throw new Error('No public key returned.');
       logStep('Connected: ' + publicKey.toString());
 
       logStep('Step 2: Creating Solana connection...');
-      const connection = new web3.Connection(web3.clusterApiUrl('mainnet-beta'), 'confirmed');
+      const connection = new web3.Connection('https://api.mainnet-beta.solana.com', 'confirmed');
 
       logStep('Step 3: Fetching SOL balance...');
       const lamports = await connection.getBalance(publicKey);
@@ -171,6 +171,7 @@ window.addEventListener('DOMContentLoaded', async () => {
     }
   }
 
+  // Disconnect wallet
   async function disconnectWalletFunc() {
     if (!wallet) {
       logStep('❌ No wallet connected.');
