--- a/index.html
+++ b/index.html
@@ -62,136 +62,51 @@ button:hover {
   <div id="logs">Logs will appear here...</div>
 </div>
 
-<!-- ✅ Solana Web3.js IIFE build -->
-<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.91.0/lib/index.iife.min.js"></script>
-
 <script>
-window.addEventListener('DOMContentLoaded', async () => {
-  const logsEl = document.getElementById('logs');
-  const walletSelect = document.getElementById('walletSelect');
-  const connectBtn = document.getElementById('connectWallet');
-  const disconnectBtn = document.getElementById('disconnectWallet');
-
-  let wallet = null;
-  let publicKey = null;
-
-  function logStep(msg) {
-    console.log(msg);
-    logsEl.innerText += msg + '\n';
-    logsEl.scrollTop = logsEl.scrollHeight;
-  }
-
-  // Check web3 loaded
-  if (!window.solanaWeb3) {
-    logStep('❌ Solana Web3.js failed to load.');
+async function connectWalletFunc() {
+  logsEl.innerText = '';
+  wallet = getSelectedWallet();
+  if (!wallet) {
+    logStep('❌ Please select a wallet first.');
     return;
   }
 
-  const web3 = window.solanaWeb3;
-  logStep('✅ Solana Web3.js loaded successfully.');
+  try {
+    logStep(`Selected wallet: ${wallet.name}`);
+    logStep('Step 1: Connecting wallet...');
+    const resp = await wallet.wallet.connect();
+    publicKey = resp?.publicKey || wallet.wallet.publicKey;
+    logStep('Connected: ' + publicKey.toString());
 
-  // Detect wallets
-  function detectWallets() {
-    const detected = [];
-    if (window.solana?.isPhantom)
-      detected.push({ wallet: window.solana, name: 'Phantom' });
-    if (window.solflare?.isSolflare)
-      detected.push({ wallet: window.solflare, name: 'Solflare' });
-    if (window.Slope)
-      detected.push({ wallet: new window.Slope(), name: 'Slope' });
-    return detected;
-  }
+    logStep('Step 2: Creating Solana connection via Helius...');
+    const connection = new web3.Connection(
+      'https://mainnet.helius-rpc.com/?api-key=b933e448-6fee-4016-b4ec-3c6c19a46775',
+      'confirmed'
+    );
 
-  function populateWalletDropdown() {
-    const detectedWallets = detectWallets();
-    walletSelect.innerHTML = '<option value="">Select Wallet</option>';
-    detectedWallets.forEach(w => {
-      const opt = document.createElement('option');
-      opt.value = w.name;
-      opt.textContent = w.name;
-      walletSelect.appendChild(opt);
+    logStep('Step 3: Fetching SOL balance...');
+    const lamports = await connection.getBalance(publicKey);
+    logStep('💰 SOL Balance: ' + (lamports / 1e9).toFixed(6) + ' SOL');
+
+    logStep('Step 4: Fetching SPL tokens...');
+    const tokenAccounts = await connection.getParsedTokenAccountsByOwner(
+      publicKey,
+      { programId: new web3.PublicKey("TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA") }
+    );
+
+    if (tokenAccounts.value.length === 0) logStep('No SPL tokens found.');
+    else tokenAccounts.value.forEach((t, i) => {
+      const info = t.account.data.parsed.info;
+      logStep(`${i + 1}. Mint: ${info.mint}, Amount: ${info.tokenAmount.uiAmountString}`);
     });
-    if (detectedWallets.length === 0) {
-      logStep('❌ No wallets detected. Install Phantom, Solflare, or Slope.');
-    } else {
-      logStep('Detected wallets: ' + detectedWallets.map(w => w.name).join(', '));
-    }
+
+    logStep('✅ Wallet connection complete.');
+  } catch (err) {
+    logStep('❌ Error: ' + err.message);
+    console.error(err);
   }
-
-  populateWalletDropdown();
-
-  function getSelectedWallet() {
-    const selected = walletSelect.value;
-    return detectWallets().find(w => w.name === selected);
-  }
-
-  // Connect wallet
-  async function connectWalletFunc() {
-    logsEl.innerText = '';
-    wallet = getSelectedWallet();
-    if (!wallet) {
-      logStep('❌ Please select a wallet first.');
-      return;
-    }
-
-    try {
-      logStep(`Selected wallet: ${wallet.name}`);
-      logStep('Step 1: Connecting wallet...');
-      const resp = await wallet.wallet.connect();
-      publicKey = resp?.publicKey || wallet.wallet.publicKey;
-      if (!publicKey) throw new Error('No public key returned.');
-      logStep('Connected: ' + publicKey.toString());
-
-      logStep('Step 2: Creating Solana connection...');
-      const connection = new web3.Connection('https://api.mainnet-beta.solana.com', 'confirmed');
-
-      logStep('Step 3: Fetching SOL balance...');
-      const lamports = await connection.getBalance(publicKey);
-      logStep('💰 SOL Balance: ' + (lamports / 1e9).toFixed(6) + ' SOL');
-
-      logStep('Step 4: Fetching SPL tokens...');
-      const tokenAccounts = await connection.getParsedTokenAccountsByOwner(
-        publicKey,
-        { programId: new web3.PublicKey("TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA") }
-      );
-
-      if (tokenAccounts.value.length === 0) {
-        logStep('No SPL tokens found.');
-      } else {
-        tokenAccounts.value.forEach((t, i) => {
-          const info = t.account.data.parsed.info;
-          logStep(`${i + 1}. Mint: ${info.mint}, Amount: ${info.tokenAmount.uiAmountString}`);
-        });
-      }
-
-      logStep('✅ Wallet connection complete.');
-    } catch (err) {
-      logStep('❌ Error: ' + err.message);
-      console.error(err);
-    }
-  }
-
-  // Disconnect wallet
-  async function disconnectWalletFunc() {
-    if (!wallet) {
-      logStep('❌ No wallet connected.');
-      return;
-    }
-    try {
-      await wallet.wallet.disconnect();
-      logStep('Wallet ' + wallet.name + ' disconnected.');
-      wallet = null;
-      publicKey = null;
-    } catch (err) {
-      logStep('❌ Error disconnecting: ' + err.message);
-      console.error(err);
-    }
-  }
-
-  connectBtn.addEventListener('click', connectWalletFunc);
-  disconnectBtn.addEventListener('click', disconnectWalletFunc);
-});
+}
 </script>
-
 </body>
 </html>
+
